--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8081
 #COBFIGURACION BASE DE DATOS
 spring.datasource.url=jdbc:mysql://shopsmart-aws.c5af7jzidg1v.us-east-1.rds.amazonaws.com:3306/shopsmart
 spring.datasource.username=root
-spring.datasource.password=Santiago10
+spring.datasource.password=dummy
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #CONFIGURACION JPA
@@ -41,7 +41,7 @@ spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=okramferia@gmail.com
-spring.mail.password=lydinkuifcpppavv 
+spring.mail.password=dummy 
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
